--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic>=2.5.3",
     "pymongo>=4.6.0",
+    "ruff>=0.12.0",
 ]
 
 [build-system]
