--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic>=2.5.3",
     "pymongo>=4.6.0",
     "ruff>=0.12.0",
+    "python-json-logger>=3.0.0",
 ]
 
 [build-system]
