--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pymongo>=4.6.0",
     "ruff>=0.12.0",
     "python-json-logger>=3.0.0",
+    "pytest>=8.4.1",
 ]
 
 [build-system]
